// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form should not render any field if component type is not matched 1`] = `
.c5 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  letter-spacing: 0rem;
  line-height: 2.6rem;
  text-align: initial;
  display: inline-block;
}

.c3 {
  border: none;
  position: relative;
  user-select: none;
  font-family: inherit;
  text-decoration: none;
  transition: all 100ms ease-out;
  padding: 1rem 2.4rem 1.2rem;
  border-radius: 100rem;
  display: inline-flex;
  justify-content: center;
  align-items: center;
}

.c3:hover {
  cursor: pointer;
}

.c3:focus {
  outline: none;
}

.c3:disabled {
  cursor: not-allowed;
}

.c3:disabled {
  color: #98A7B7;
  background: #dfe4e9;
}

.c3:not(:disabled):not(:hover) {
  color: #ffffff;
  background: #3872D2;
}

.c3:not(:disabled):active {
  color: #ffffff;
  background: #275093;
}

.c3:not(:disabled):not(:active):hover {
  color: #ffffff;
  background: #3061B3;
  box-shadow: 0 0.2rem 0.8rem rgba(48,97,179,0.35);
}

.c3 .sc-1pf3x8a-0+.c4 {
  margin-left: 0.8rem;
}

.c3 .c4+.sc-1pf3x8a-0 {
  margin-left: 0.8rem;
}

.c2 {
  display: flex;
  grid-column: 1/-1;
  margin-top: 1.6rem;
  flex-direction: row;
  justify-content: flex-end;
}

.c2>*+* {
  margin-left: 1.6rem;
}

.c1 {
  grid-column: 1/-1;
}

.c1>* {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c0 {
  grid-template-rows: auto;
  grid-template-columns: repeat(12,1fr);
  grid-gap: 1.6rem;
  display: inline-grid;
}

.c0>h2 {
  grid-column: 1/-1;
  margin-bottom: 0.8rem;
}

.c0>span {
  grid-column: 1/-1;
  margin-bottom: 1rem;
}

<div>
  <form
    class="c0"
    id="medly-dynamic-form"
  >
    <div
      class="c1"
      gridcolumn="1/-1"
    />
    <div
      class="c2"
      flexdirection="row"
    >
      <button
        class="c3"
        edges="rounded"
        form="medly-dynamic-form"
        type="submit"
        variant="solid"
      >
        <span
          class="c4 c5"
          textalign="initial"
          textcolor="inherit"
          textvariant="button1"
        >
          Submit
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`Form should render properly with initial state 1`] = `
.c31 {
  overflow: visible;
  font-size: 2.4rem;
  transition: all 100ms linear;
  cursor: inherit;
}

.c31 * {
  fill-opacity: 1;
  transition: all 100ms linear;
  fill: #607890;
}

.c44 {
  overflow: visible;
  font-size: 2.4rem;
  transition: all 100ms linear;
  cursor: pointer;
}

.c44 * {
  fill-opacity: 1;
  transition: all 100ms linear;
  fill: #607890;
}

.c18 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c21 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  letter-spacing: 0rem;
  line-height: 2.6rem;
  text-align: initial;
  display: inline-block;
}

.c62 {
  margin: 0;
  color: inherit;
  font-size: 1.8rem;
  font-weight: 700;
  letter-spacing: -0.02rem;
  line-height: 2.4rem;
  text-align: initial;
}

.c70 {
  border: none;
  position: relative;
  user-select: none;
  font-family: inherit;
  text-decoration: none;
  transition: all 100ms ease-out;
  padding: 1rem 2.4rem 1.2rem;
  border-radius: 100rem;
  display: inline-flex;
  justify-content: center;
  align-items: center;
}

.c70,
.c70 .c17,
.c70 .c30,
.c70 .c30 * {
  transition: all 100ms ease-out;
}

.c70:hover {
  cursor: pointer;
}

.c70:focus {
  outline: none;
}

.c70:disabled {
  cursor: not-allowed;
}

.c70:disabled {
  color: #98A7B7;
  background: #dfe4e9;
}

.c70:disabled .c30 * {
  fill: #98A7B7;
}

.c70:not(:disabled):not(:hover) {
  color: #ffffff;
  background: #3872D2;
}

.c70:not(:disabled):not(:hover) .c30 * {
  fill: #ffffff;
}

.c70:not(:disabled):active {
  color: #ffffff;
  background: #275093;
}

.c70:not(:disabled):active .c30 * {
  fill: #ffffff;
}

.c70:not(:disabled):not(:active):hover {
  color: #ffffff;
  background: #3061B3;
  box-shadow: 0 0.2rem 0.8rem rgba(48,97,179,0.35);
}

.c70:not(:disabled):not(:active):hover .c30 * {
  fill: #ffffff;
}

.c70 .c30+.c17 {
  margin-left: 0.8rem;
}

.c70 .c17+.c30 {
  margin-left: 0.8rem;
}

.c46 {
  position: relative;
  display: inline-flex;
}

.c56 {
  font-size: 1.2rem;
  line-height: 1.6rem;
  margin: 0.5rem 1.6rem 0;
  white-space: initial;
  user-select: none;
}

.c50 {
  pointer-events: none;
}

.c50 * {
  fill: #546A7F;
}

.c50:hover * {
  fill: #546A7F;
}

.c51 {
  margin-left: 1.6rem;
}

.c9 {
  top: 50%;
  left: 0;
  cursor: text;
  user-select: none;
  position: absolute;
  pointer-events: none;
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  font-size: 1.6rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.6rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
  transform-origin: 0 0;
  touch-action: manipulation;
  transform: translateY(-50%);
  opacity: 1;
  z-index: 1;
  width: 100%;
  max-width: min-content;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c9 ::after {
  content: ' *';
}

.c5 {
  position: relative;
  display: flex;
  align-items: center;
  flex-direction: row;
  box-sizing: border-box;
  height: 5.6rem;
  padding: 0 1.6rem;
  transition: all 100ms ease-out;
  cursor: text;
  border-radius: 0.4rem 0.4rem 0 0;
  background-color: #eff2f4;
}

.c5 .c8 {
  color: #546A7F;
}

.c5~.c55 {
  color: #546A7F;
}

.c5::after {
  content: '';
  width: 100%;
  height: 0;
  position: absolute;
  bottom: 0;
  left: 0;
  box-sizing: border-box;
  border-top: 0.1rem solid #546A7F;
  transition: all 100ms ease-out;
}

.c5:hover::after,
.c5:focus-within::after {
  border-width: 0.2rem;
}

.c5 input {
  box-shadow: 0 0 0 100000px #eff2f4 inset;
}

.c5:focus-within,
.c5:focus-within:hover {
  background-color: #EBF1FA;
}

.c5:focus-within::after,
.c5:focus-within:hover::after {
  border-color: #3872D2;
  border-radius: 0;
}

.c5:focus-within .c8,
.c5:focus-within:hover .c8 {
  color: #3872D2;
}

.c5:focus-within input,
.c5:focus-within:hover input {
  box-shadow: 0 0 0 100000px #EBF1FA inset;
}

.c5:focus-within input::placeholder,
.c5:focus-within:hover input::placeholder {
  color: rgba(0, 90, 238, .2);
}

.c6 {
  display: flex;
  position: relative;
  align-items: center;
  background-color: transparent;
  flex: 1;
  height: 100%;
}

.c43 {
  position: absolute;
  left: 0;
  opacity: 0;
  cursor: text;
  user-select: none;
  pointer-events: none;
  color: rgba(0, 90, 238, .2);
  bottom: 0.7rem;
}

.c3 {
  position: relative;
  flex-direction: column;
  display: inline-flex;
  width: min-content;
  min-width: auto;
  margin: 0.8rem 0.8rem 0.8rem 0;
}

.c41 {
  position: relative;
  flex-direction: column;
  display: flex;
  width: 100%;
  min-width: auto;
  margin: 0.8rem 0;
}

.c48 {
  position: relative;
  flex-direction: column;
  display: flex;
  width: 100%;
  min-width: 20rem;
  margin: 0.8rem 0;
}

.c7 {
  color: #13181D;
  width: 100%;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  transition: all 100ms ease-out;
  background-color: transparent;
  border: none;
  text-overflow: ellipsis;
  resize: none;
  z-index: 1;
  align-self: flex-end;
  margin-bottom: 0.7rem;
}

.c7,
.c7~.c42 {
  font-size: 1.6rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.6rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
}

.c7.c7.c7:focus {
  outline: none;
  box-shadow: unset;
}

.c7.c7.c7:focus::placeholder {
  opacity: 1;
}

.c7:disabled {
  color: #435465;
}

.c7:disabled~.c8,
.c7:disabled~.c42 {
  cursor: not-allowed;
}

.c7 ::placeholder {
  opacity: 0;
  transition: all 100ms ease-out;
}

.c7:not(:placeholder-shown)~.c8,
.c7:focus~.c8 {
  transform: translateY(-87%) scale(0.75);
}

.c7:not(:placeholder-shown)~.c42 {
  opacity: 1;
}

.c13 {
  color: #13181D;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  margin: 0px 0.8rem 0px 0px;
  cursor: default;
}

.c13 ::after {
  color: red;
  content: ' *';
}

.c57 {
  position: relative;
  display: inline-flex;
  min-width: auto;
  margin: 0.8rem 0.8rem 0.8rem 0;
}

.c57 .c2 {
  margin: 0;
  caret-color: transparent;
}

.c57 .c2 label {
  pointer-events: none;
}

.c57 .c2 div,
.c57 .c2 input,
.c57 .c2 label {
  cursor: pointer;
}

.c57 .c2 .c49 {
  transition: transform 200ms ease-out;
  transform: rotate(0deg);
}

.c57 .c2:not(:focus-within):hover .c49 * {
  fill: #13181D;
}

.c20 {
  display: inline-flex;
  flex-direction: column;
  align-items: flex-start;
}

.c20>:first-child {
  margin-bottom: 0.9rem;
}

.c33 {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.c33>:first-child {
  margin-bottom: 0.9rem;
}

.c22 {
  user-select: none;
  cursor: inherit;
  color: inherit;
}

.c22 ::after {
  content: ' *';
  color: default:inherit;
  disabled: #98A7B7;
}

.c25 {
  user-select: none;
  cursor: inherit;
  color: inherit;
  padding: 0 1.6rem;
}

.c23 {
  display: grid;
  grid-template-columns: repeat(1, 1fr);
}

.c29 {
  border: 0.15rem solid;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  border-radius: 22.2%;
  transition: all 100ms ease-out;
  display: flex;
  justify-content: center;
  align-items: center;
}

.c29 .c30 {
  pointer-events: none;
  z-index: 1;
  transition: all 200ms ease-in-out;
  transform: scale(0);
  width: 100%;
  height: 100%;
  margin-right: 0.05rem;
}

.c27 {
  opacity: 0;
  margin: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  outline: none;
  position: absolute;
}

.c27:checked~.c28 {
  border-color: #3872D2;
  background-color: #3872D2;
}

.c27:checked~.c28 .c30 {
  transform: scale(1);
}

.c27:checked~.c28 .c30 * {
  fill: #ffffff;
}

.c27:not(:checked)~.c28 {
  background-color: transparent;
  border-color: #13181D;
}

.c27:not(:disabled):focus~.c28 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
  border-color: #3872D2;
}

.c27:not(:disabled):focus:not(:checked)~.c28 {
  border-color: #3872D2;
}

.c26 {
  margin: 0.3rem;
  flex-shrink: 0;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
}

.c24 {
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  align-items: center;
  justify-content: flex-end;
  flex-direction: row-reverse;
}

.c24 * {
  cursor: pointer;
}

.c24.c24.c24:hover .c28 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
  border-color: #3061B3;
  background-color: #3061B3;
}

.c24.c24.c24:active .c28 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.5);
  border-color: #275093;
  background-color: #275093;
}

.c32 {
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  align-items: center;
  justify-content: flex-end;
  flex-direction: row-reverse;
}

.c32 * {
  cursor: pointer;
}

.c32.c32.c32:hover .c28 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
  border-color: #3872D2;
}

.c32.c32.c32:active .c28 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.5);
  border-color: #3061B3;
}

.c68 {
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  justify-content: flex-start;
  align-items: center;
  flex-direction: row;
}

.c68 * {
  cursor: pointer;
}

.c68.c68.c68:hover .c28 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
  border-color: #3061B3;
  background-color: #3061B3;
}

.c68.c68.c68:active .c28 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.5);
  border-color: #275093;
  background-color: #275093;
}

.c45 {
  cursor: pointer;
  border-radius: 50%;
  padding: 0.8rem;
}

.c45 * {
  fill: #607890;
}

.c45:hover {
  background-color: #dfe4e9;
}

.c45:hover * {
  fill: #303C48;
}

.c40>.c2 {
  margin: 0;
}

.c40>.c2>.c4 {
  padding-right: 0.8rem;
}

.c54 {
  border-right: 0.1rem solid rgba(84, 106, 127, 0.2);
  height: 3.2rem;
  margin-right: 1.6rem;
  border-radius: 0.1rem;
  transition: border-color 100ms ease-out;
}

.c52 {
  padding: 0 1.6rem 0 0.8rem;
}

.c52 .c30:first-of-type {
  margin-right: 0.8rem;
}

.c52 .c30:nth-of-type(2) {
  transition: transform 200ms ease-out;
}

.c52:hover .c53 {
  border-color: #546A7F;
}

.c14 {
  grid-area: label;
  align-self: center;
  user-select: none;
}

.c19 {
  grid-area: description;
  margin: 5px 0 0 2px;
  color: #012040;
}

.c12 {
  margin: 0.8rem 0.8rem 0.8rem 0;
  display: inline-grid;
  align-items: center;
  grid-template-columns: minmax(max-content, 25%) minmax(auto, 80%);
  grid-template-areas: 'label field' 'random description';
}

.c16 {
  width: 1px;
  opacity: 0;
}

.c15 {
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
  padding: 0.8rem;
  color: #435465;
  background-clip: padding-box;
  background-color: #ffffff;
  box-sizing: border-box;
  border: 1px solid #b0bcc8;
  border-radius: 5px;
  cursor: pointer;
  text-align: center;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  user-select: none;
}

.c15:focus {
  border-color: #012040;
  outline: 0;
}

.c61 {
  user-select: none;
  max-width: max-content;
  cursor: default;
  border: 1px solid;
  border-radius: 2rem;
  margin-right: 0.8rem;
  color: #303C48;
  border-color: #607890;
  background-color: #dfe4e9;
  padding: 0.2rem 0.5rem 0.2rem 0.9rem;
  display: inline-flex;
  justify-content: center;
  align-items: center;
}

.c61:focus {
  outline: none;
}

.c61:disabled,
.c61:disabled>.c30 {
  cursor: not-allowed;
}

.c61 .c30 {
  font-size: 1.2rem;
  border-radius: 50%;
  cursor: pointer;
  padding: 0.4rem;
  margin-left: 0.6rem;
}

.c61 .c30 {
  background-color: #b0bcc8;
}

.c61 .c30 * {
  fill: #303C48;
}

.c61 .c30:hover {
  background-color: #98A7B7;
}

.c61 .c30:hover * {
  fill: #13181D;
}

.c61:hover {
  border-color: #435465;
}

.c60 {
  display: flex;
  align-items: center;
}

.c58 {
  position: relative;
  display: inline-flex;
  min-width: auto;
  margin: 0.8rem 0.8rem 0.8rem 0;
}

.c58 .c2 {
  margin: 0;
}

.c58 .c2 label {
  pointer-events: none;
}

.c58 .c2 div,
.c58 .c2 input,
.c58 .c2 label {
  cursor: pointer;
}

.c58 .c2:focus-within input {
  cursor: text;
}

.c58 .c2 input {
  padding-right: 1.6rem;
}

.c58 .c59>.c30 {
  transform: rotate(0deg);
}

.c58 .c59>.c30 * {
  fill: #546A7F;
}

.c58:not(:focus-within):hover .c59>.c30 * {
  fill: #13181D;
}

.c38 {
  position: relative;
  transition: all 100ms ease-out;
  box-sizing: border-box;
  border: 0.15rem solid;
  width: 100%;
  height: 100%;
  border-radius: 100%;
}

.c38::after {
  content: '';
  position: absolute;
  top: 50%;
  left: 50%;
  width: 67%;
  height: 67%;
  transform: translate(-50%,-50%) scale(0);
  border-radius: 100%;
  transition: transform 100ms ease-out;
}

.c36 {
  position: absolute;
  opacity: 0;
  width: 1%;
  height: 1%;
  margin: 0;
}

.c36~.c37 {
  border-color: #13181D;
}

.c36~.c37::after {
  background-color: #13181D;
}

.c36:checked~.c37::after {
  transform: translate(-50%,-50%) scale(1);
}

.c36:disabled~.c37 {
  border-color: #98A7B7;
}

.c36:disabled~.c37::after {
  background-color: #98A7B7;
}

.c36:not(:disabled):checked~.c37 {
  border-color: #3872D2;
}

.c36:not(:disabled):checked~.c37::after {
  background-color: #3872D2;
}

.c36:not(:disabled):focus~.c37 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
}

.c35 {
  margin: 0.3rem;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
  border-radius: 100%;
  flex-grow: 0;
  flex-shrink: 0;
}

.c34 {
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  align-items: center;
  justify-content: flex-end;
  flex-direction: row-reverse;
}

.c39 {
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  align-items: center;
  justify-content: flex-end;
  flex-direction: row-reverse;
}

.c39:hover .c37 {
  border-color: #3872D2;
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
}

.c39:active .c37 {
  border-color: #3061B3;
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.5);
}

.c47 {
  display: inline-flex;
  width: min-content;
  min-width: auto;
  margin: 0.8rem 0.8rem 0.8rem 0;
}

.c47>.c2 {
  margin: 0;
}

.c47 input[type='time']::-webkit-calendar-picker-indicator {
  background: none;
  display: none;
}

.c69 {
  display: flex;
  grid-column: 1/-1;
  margin-top: 1.6rem;
  flex-direction: row;
  justify-content: flex-end;
}

.c69>*+* {
  margin-left: 1.6rem;
}

.c1 {
  grid-column: 1/7;
}

.c1>* {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c10 {
  grid-column: 7/-1;
}

.c10>* {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c11 {
  grid-column: 1/-1;
}

.c11>* {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c65 {
  grid-column: 1/5;
}

.c65>* {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c66 {
  grid-column: 5/9;
}

.c66>* {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c67 {
  grid-column: 9/-1;
}

.c67>* {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c63 {
  grid-column: 1/-1;
  margin-top: 2.6rem;
}

.c64 {
  margin-bottom: 1rem;
}

.c0 {
  grid-template-rows: auto;
  grid-template-columns: repeat(12,1fr);
  grid-gap: 1.6rem;
  display: inline-grid;
}

.c0>h2 {
  grid-column: 1/-1;
  margin-bottom: 0.8rem;
}

.c0>span {
  grid-column: 1/-1;
  margin-bottom: 1rem;
}

<div>
  <form
    class="c0"
    id="medly-dynamic-form"
  >
    <div
      class="c1"
      gridcolumn="1/7"
    >
      <div
        class="c2 c3"
        id="firstName-input-wrapper"
        minwidth="auto"
      >
        <div
          class="c4 c5"
          minrows="1"
          variant="filled"
        >
          <div
            class="c6"
            variant="filled"
          >
            <input
              aria-describedby="firstName-helper-text"
              class="c7"
              errortext=""
              id="firstName-input"
              inputsize="M"
              name="firstName"
              placeholder=" "
              required=""
              type="text"
              value="first name"
              variant="filled"
            />
            <label
              class="c8 c9"
              for="firstName-input"
              inputwidth="0"
              required=""
              variant="filled"
            >
              First Name
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c10"
      gridcolumn="7/-1"
    >
      <div
        class="c2 c3"
        id="lastName-input-wrapper"
        minwidth="auto"
      >
        <div
          class="c4 c5"
          minrows="1"
          variant="filled"
        >
          <div
            class="c6"
            variant="filled"
          >
            <input
              aria-describedby="lastName-helper-text"
              class="c7"
              errortext=""
              id="lastName-input"
              inputsize="M"
              name="lastName"
              placeholder=" "
              required=""
              type="text"
              value="last name"
              variant="filled"
            />
            <label
              class="c8 c9"
              for="lastName-input"
              inputwidth="0"
              required=""
              variant="filled"
            >
              Last Name
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c11"
      gridcolumn="1/-1"
    >
      <div
        class="c2 c3"
        id="email-input-wrapper"
        minwidth="auto"
      >
        <div
          class="c4 c5"
          minrows="1"
          variant="filled"
        >
          <div
            class="c6"
            variant="filled"
          >
            <input
              aria-describedby="email-helper-text"
              class="c7"
              errortext=""
              id="email-input"
              inputsize="M"
              name="email"
              placeholder=" "
              required=""
              type="email"
              value="email@email.com"
              variant="filled"
            />
            <label
              class="c8 c9"
              for="email-input"
              inputwidth="0"
              required=""
              variant="filled"
            >
              Email
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c11"
      gridcolumn="1/-1"
    >
      <div
        class="c2 c3"
        id="website-input-wrapper"
        minwidth="auto"
      >
        <div
          class="c4 c5"
          minrows="1"
          variant="filled"
        >
          <div
            class="c6"
            variant="filled"
          >
            <input
              aria-describedby="website-helper-text"
              class="c7"
              errortext=""
              id="website-input"
              inputsize="M"
              name="website"
              placeholder=" "
              required=""
              type="url"
              value=""
              variant="filled"
            />
            <label
              class="c8 c9"
              for="website-input"
              inputwidth="0"
              required=""
              variant="filled"
            >
              Website
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c11"
      gridcolumn="1/-1"
    >
      <div
        class="c12"
        id="resume-field"
        labelposition="left"
      >
        <label
          class="c13 c14"
          labelposition="left"
          required=""
        >
          Resume
        </label>
        <label
          class="c15"
          for="resume"
          id="resume-label"
        >
          Click to choose file
          <input
            class="c16"
            files=""
            id="resume"
            maxsize="5000000"
            minwidth="auto"
            name="resume"
            required=""
            type="file"
          />
        </label>
        <span
          class="c17 c18 c19"
          textalign="initial"
          textcolor="inherit"
        >
          File size should be less than 5MB
        </span>
      </div>
    </div>
    <div
      class="c11"
      gridcolumn="1/-1"
    >
      <div
        aria-describedby="languages-helper-text"
        class="c20"
        id="languages-wrapper"
        minwidth="auto"
        name="languages"
        type="checkbox"
      >
        <span
          class="c17 c21 c22"
          id="languages-label"
          required=""
          textalign="initial"
          textcolor="inherit"
          textvariant="body1"
          textweight="Medium"
          type="checkbox"
        >
          Languages
        </span>
        <div
          class="c23"
          columns="1"
          id="languages-options"
        >
          <label
            class="c24"
            for="JAVA-languages"
            id="JAVA-languages-wrapper"
            labelposition="right"
          >
            <span
              class="c17 c18 c25"
              id="JAVA-languages-label"
              labelposition="right"
              textalign="initial"
              textcolor="inherit"
              type="checkbox"
            >
              JAVA
            </span>
            <div
              class="c26"
            >
              <input
                checked=""
                class="c27"
                id="JAVA-languages"
                name="java"
                type="checkbox"
              />
              <div
                class="c28 c29"
              >
                <svg
                  class="c30 c31"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                    fill="green"
                  />
                </svg>
              </div>
            </div>
          </label>
          <label
            class="c32"
            for="RUBY-languages"
            id="RUBY-languages-wrapper"
            labelposition="right"
          >
            <span
              class="c17 c18 c25"
              id="RUBY-languages-label"
              labelposition="right"
              textalign="initial"
              textcolor="inherit"
              type="checkbox"
            >
              RUBY
            </span>
            <div
              class="c26"
            >
              <input
                class="c27"
                id="RUBY-languages"
                name="ruby"
                type="checkbox"
              />
              <div
                class="c28 c29"
              >
                <svg
                  class="c30 c31"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                    fill="green"
                  />
                </svg>
              </div>
            </div>
          </label>
        </div>
      </div>
    </div>
    <div
      class="c11"
      gridcolumn="1/-1"
    >
      <div
        aria-describedby="role-helper-text"
        class="c33"
        id="role-wrapper"
        minwidth="auto"
        type="radio"
      >
        <span
          class="c17 c21 c22"
          id="role-label"
          required=""
          textalign="initial"
          textcolor="inherit"
          textvariant="body1"
          textweight="Medium"
          type="radio"
        >
          Role
        </span>
        <div
          class="c23"
          columns="1"
          id="role-options"
        >
          <label
            class="c34"
            for="Front End-role"
            id="Front End-role-wrapper"
            labelposition="right"
          >
            <span
              class="c17 c18 c25"
              id="Front End-role-label"
              labelposition="right"
              textalign="initial"
              textcolor="inherit"
              type="radio"
            >
              Front End
            </span>
            <div
              class="c35"
            >
              <input
                checked=""
                class="c36"
                id="Front End-role"
                name="role"
                required=""
                type="radio"
                value="front-end"
              />
              <div
                class="c37 c38"
              />
            </div>
          </label>
          <label
            class="c39"
            for="Back End-role"
            id="Back End-role-wrapper"
            labelposition="right"
          >
            <span
              class="c17 c18 c25"
              id="Back End-role-label"
              labelposition="right"
              textalign="initial"
              textcolor="inherit"
              type="radio"
            >
              Back End
            </span>
            <div
              class="c35"
            >
              <input
                class="c36"
                id="Back End-role"
                name="role"
                required=""
                type="radio"
                value="back-end"
              />
              <div
                class="c37 c38"
              />
            </div>
          </label>
          <label
            class="c39"
            for="Full Stack-role"
            id="Full Stack-role-wrapper"
            labelposition="right"
          >
            <span
              class="c17 c18 c25"
              id="Full Stack-role-label"
              labelposition="right"
              textalign="initial"
              textcolor="inherit"
              type="radio"
            >
              Full Stack
            </span>
            <div
              class="c35"
            >
              <input
                class="c36"
                id="Full Stack-role"
                name="role"
                required=""
                type="radio"
                value="full-stack"
              />
              <div
                class="c37 c38"
              />
            </div>
          </label>
        </div>
      </div>
    </div>
    <div
      class="c1"
      gridcolumn="1/7"
    >
      <div
        class="c2 c3 c40"
        id="birthDate-datepicker-wrapper"
        minwidth="auto"
        placement="bottom-start"
        variant="filled"
      >
        <div
          class="c2 c41"
          id="birthDate-input-wrapper"
          minwidth="auto"
        >
          <div
            class="c4 c5"
            minrows="1"
            variant="filled"
          >
            <div
              class="c6"
              variant="filled"
            >
              <input
                aria-describedby="birthDate-helper-text"
                class="c7"
                errortext=""
                id="birthDate-input"
                inputsize="M"
                name="birthDate"
                pattern="\\\\d{2} \\\\/ \\\\d{2} \\\\/ \\\\d{4}"
                placeholder="DD / MM / YYYY"
                required=""
                type="text"
                value="01 / 01 / 2019"
                variant="filled"
              />
              <span
                class="c42 c43"
                variant="filled"
              >
                01 / 01 / 2019
              </span>
              <label
                class="c8 c9"
                for="birthDate-input"
                inputwidth="0"
                required=""
                variant="filled"
              >
                Birth Date
              </label>
            </div>
            <svg
              class="c30 c44 c45"
              fill="none"
              height="1em"
              id="birthDate-calendar-icon"
              title="birthDate-calendar-icon"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M19 4h-1V3c0-.55-.45-1-1-1s-1 .45-1 1v1H8V3c0-.55-.45-1-1-1s-1 .45-1 1v1H5c-1.11 0-1.99.9-1.99 2L3 20a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 15c0 .55-.45 1-1 1H6c-.55 0-1-.45-1-1V9h14v10zM9 13v-2H7v2h2zm2-2h2v2h-2v-2zm6 2v-2h-2v2h2z"
                fill="#000"
                fill-opacity=".54"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c10"
      gridcolumn="7/-1"
    >
      <div
        class="c46 c47"
        id="medly-popover-wrapper"
        minwidth="auto"
      >
        <div
          class="c2 c48"
          id="birthTime-input-wrapper"
          minwidth="20rem"
        >
          <div
            class="c4 c5"
            minrows="1"
            variant="filled"
          >
            <div
              class="c6"
              variant="filled"
            >
              <input
                aria-describedby="birthTime-helper-text"
                class="c7"
                errortext=""
                id="birthTime-input"
                inputsize="M"
                name="birthTime"
                placeholder=" "
                required=""
                type="time"
                value="22:00"
                variant="filled"
              />
              <label
                class="c8 c9"
                for="birthTime-input"
                inputwidth="0"
                required=""
                variant="filled"
              >
                Birth Time
              </label>
            </div>
            <svg
              class="c30 c31 c49 c50 c51"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm-.28-13h.06c.4 0 .72.32.72.72v4.54l3.87 2.3c.35.2.46.65.25.99-.2.34-.64.44-.98.24l-4.15-2.49a.99.99 0 0 1-.49-.86V7.72c0-.4.32-.72.72-.72z"
                fill="#000"
                fill-opacity=".54"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c11"
      gridcolumn="1/-1"
    >
      <div
        class="c2 c3"
        id="experience-wrapper"
        label="Experience"
        minwidth="auto"
        name="experience"
        type="date-range"
      >
        <div
          class="c4 c5 c52"
          id="experience-textFields"
          variant="filled"
        >
          <svg
            class="c30 c44 c45"
            fill="none"
            height="1em"
            id="experience-calendar-icon"
            title="experience-calendar-icon"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M19 4h-1V3c0-.55-.45-1-1-1s-1 .45-1 1v1H8V3c0-.55-.45-1-1-1s-1 .45-1 1v1H5c-1.11 0-1.99.9-1.99 2L3 20a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 15c0 .55-.45 1-1 1H6c-.55 0-1-.45-1-1V9h14v10zM9 13v-2H7v2h2zm2-2h2v2h-2v-2zm6 2v-2h-2v2h2z"
              fill="#000"
              fill-opacity=".54"
              fill-rule="evenodd"
            />
          </svg>
          <div
            class="c6"
            id="experience-startDate-input-wrapper"
            variant="filled"
          >
            <input
              class="c7"
              errortext=""
              id="experience-startDate-input"
              inputsize="M"
              name="START_DATE"
              pattern="\\\\d{2} \\\\/ \\\\d{2} \\\\/ \\\\d{4}"
              placeholder="DD / MM / YYYY"
              required=""
              value="01 / 01 / 2019"
              variant="filled"
            />
            <span
              class="c42 c43"
              variant="filled"
            >
              01 / 01 / 2019
            </span>
            <label
              class="c8 c9"
              for="experience-startDate-input"
              inputwidth="0"
              required=""
              variant="filled"
            >
              From
            </label>
          </div>
          <i
            class="c53 c54"
            variant="filled"
          />
          <div
            class="c6"
            id="experience-endDate-input-wrapper"
            variant="filled"
          >
            <input
              class="c7"
              errortext=""
              id="experience-endDate-input"
              inputsize="M"
              name="END_DATE"
              pattern="\\\\d{2} \\\\/ \\\\d{2} \\\\/ \\\\d{4}"
              placeholder="DD / MM / YYYY"
              required=""
              value="01 / 02 / 2019"
              variant="filled"
            />
            <span
              class="c42 c43"
              variant="filled"
            >
              01 / 02 / 2019
            </span>
            <label
              class="c8 c9"
              for="experience-endDate-input"
              inputwidth="0"
              required=""
              variant="filled"
            >
              To
            </label>
          </div>
        </div>
        <span
          class="c55 c56"
          id="experience-helper-text"
          variant="filled"
        />
      </div>
    </div>
    <div
      class="c11"
      gridcolumn="1/-1"
    >
      <div
        class="c57"
        id="country-wrapper"
        minwidth="auto"
        variant="filled"
      >
        <div
          class="c2 c41"
          id="country-input-wrapper"
          minwidth="auto"
        >
          <div
            class="c4 c5"
            minrows="1"
            variant="filled"
          >
            <div
              class="c6"
              variant="filled"
            >
              <input
                aria-describedby="country-helper-text"
                autocomplete="off"
                class="c7"
                errortext=""
                id="country-input"
                inputmode="none"
                inputsize="M"
                name="country"
                placeholder="Please Select . . ."
                required=""
                type="text"
                value="India"
                variant="filled"
              />
              <label
                class="c8 c9"
                for="country-input"
                inputwidth="0"
                required=""
                variant="filled"
              >
                Country
              </label>
            </div>
            <svg
              class="c30 c31 c49 c50 c51"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.792 14.97a1 1 0 0 1-1.584 0l-3.165-4.11a1 1 0 0 1 .793-1.61h6.328a1 1 0 0 1 .793 1.61l-3.165 4.11z"
                fill="#000"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c11"
      gridcolumn="1/-1"
    >
      <div
        class="c58"
        id="graduation-wrapper"
        minwidth="auto"
        name="graduation"
        variant="filled"
      >
        <div
          class="c2 c41"
          id="graduation-input-wrapper"
          minwidth="auto"
        >
          <div
            class="c4 c5"
            minrows="1"
            variant="filled"
          >
            <div
              class="c6"
              variant="filled"
            >
              <input
                aria-describedby="graduation-helper-text"
                autocomplete="off"
                class="c7"
                errortext=""
                id="graduation-input"
                inputsize="M"
                placeholder="1 options selected"
                required=""
                type="text"
                value="BTech"
                variant="filled"
              />
              <label
                class="c8 c9"
                for="graduation-input"
                inputwidth="0"
                required=""
                variant="filled"
              >
                Graduation
              </label>
            </div>
            <div
              class="c59 c60"
              id="graduation-count"
            >
              <button
                class="c61"
                id="graduation-count-chip"
                state="default"
                variant="filled"
              >
                <span
                  class="c17 c21"
                  textalign="initial"
                  textcolor="inherit"
                  textvariant="body1"
                  textweight="Medium"
                >
                  1
                </span>
                <svg
                  class="c30 c44"
                  fill="none"
                  height="1em"
                  id="graduation-count-chip-clear"
                  title="graduation-count-chip-clear-icon"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18.3 5.71a.996.996 0 0 0-1.41 0L12 10.59 7.11 5.7A.996.996 0 1 0 5.7 7.11L10.59 12 5.7 16.89a.996.996 0 1 0 1.41 1.41L12 13.41l4.89 4.89a.996.996 0 1 0 1.41-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                    fill="#000"
                    fill-opacity=".54"
                  />
                </svg>
              </button>
              <svg
                class="c30 c31"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.792 14.97a1 1 0 0 1-1.584 0l-3.165-4.11a1 1 0 0 1 .793-1.61h6.328a1 1 0 0 1 .793 1.61l-3.165 4.11z"
                  fill="#000"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <h4
      class="c17 c62 c63"
      textalign="initial"
      textcolor="inherit"
      textvariant="h4"
    >
      Marks
    </h4>
    <span
      class="c17 c18 c64"
      textalign="initial"
      textcolor="inherit"
      textvariant="body2"
    >
      Marks Information
    </span>
    <div
      class="c65"
      gridcolumn="1/5"
    >
      <div
        class="c2 c3"
        id="marks.database-input-wrapper"
        minwidth="auto"
      >
        <div
          class="c4 c5"
          minrows="1"
          variant="filled"
        >
          <div
            class="c6"
            variant="filled"
          >
            <input
              aria-describedby="marks.database-helper-text"
              class="c7"
              errortext=""
              id="marks.database-input"
              inputsize="M"
              name="marks.database"
              placeholder="Database"
              required=""
              type="number"
              value="10"
              variant="filled"
            />
            <label
              class="c8 c9"
              for="marks.database-input"
              inputwidth="0"
              required=""
              variant="filled"
            >
              Database
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c66"
      gridcolumn="5/9"
    >
      <div
        class="c2 c3"
        id="marks.algorithms-input-wrapper"
        minwidth="auto"
      >
        <div
          class="c4 c5"
          minrows="1"
          variant="filled"
        >
          <div
            class="c6"
            variant="filled"
          >
            <input
              aria-describedby="marks.algorithms-helper-text"
              class="c7"
              errortext=""
              id="marks.algorithms-input"
              inputsize="M"
              name="marks.algorithms"
              placeholder="Algorithms"
              required=""
              type="number"
              value="10"
              variant="filled"
            />
            <label
              class="c8 c9"
              for="marks.algorithms-input"
              inputwidth="0"
              required=""
              variant="filled"
            >
              Algorithms
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c67"
      gridcolumn="9/-1"
    >
      <div
        class="c2 c3"
        id="marks.maths-input-wrapper"
        minwidth="auto"
      >
        <div
          class="c4 c5"
          minrows="1"
          variant="filled"
        >
          <div
            class="c6"
            variant="filled"
          >
            <input
              aria-describedby="marks.maths-helper-text"
              class="c7"
              errortext=""
              id="marks.maths-input"
              inputsize="M"
              name="marks.maths"
              placeholder="Maths"
              required=""
              type="number"
              value="10"
              variant="filled"
            />
            <label
              class="c8 c9"
              for="marks.maths-input"
              inputwidth="0"
              required=""
              variant="filled"
            >
              Maths
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c11"
      gridcolumn="1/-1"
    >
      <label
        class="c68"
        for="agree"
        id="agree-wrapper"
        labelposition="left"
      >
        <span
          class="c17 c18 c25"
          id="agree-label"
          labelposition="left"
          textalign="initial"
          textcolor="inherit"
          type="checkbox"
        >
          Do you Agree
        </span>
        <div
          class="c26"
        >
          <input
            checked=""
            class="c27"
            id="agree"
            minwidth="auto"
            name="agree"
            type="checkbox"
          />
          <div
            class="c28 c29"
          >
            <svg
              class="c30 c31"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                fill="green"
              />
            </svg>
          </div>
        </div>
      </label>
    </div>
    <div
      class="c69"
      flexdirection="row"
    >
      <button
        class="c70"
        edges="rounded"
        form="medly-dynamic-form"
        type="submit"
        variant="solid"
      >
        <span
          class="c17 c21"
          textalign="initial"
          textcolor="inherit"
          textvariant="button1"
        >
          Submit
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`Form should render properly without initial state 1`] = `
.c33 {
  overflow: visible;
  font-size: 2.4rem;
  transition: all 100ms linear;
  cursor: inherit;
}

.c33 * {
  fill-opacity: 1;
  transition: all 100ms linear;
  fill: #607890;
}

.c44 {
  overflow: visible;
  font-size: 2.4rem;
  transition: all 100ms linear;
  cursor: pointer;
}

.c44 * {
  fill-opacity: 1;
  transition: all 100ms linear;
  fill: #607890;
}

.c2 {
  margin: 0;
  color: inherit;
  font-size: 3.2rem;
  font-weight: 600;
  letter-spacing: -0.04rem;
  line-height: 4.0rem;
  text-align: initial;
}

.c3 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.6rem;
  text-align: initial;
  display: inline-block;
}

.c20 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c23 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  letter-spacing: 0rem;
  line-height: 2.6rem;
  text-align: initial;
  display: inline-block;
}

.c61 {
  margin: 0;
  color: inherit;
  font-size: 1.8rem;
  font-weight: 700;
  letter-spacing: -0.02rem;
  line-height: 2.4rem;
  text-align: initial;
}

.c69 {
  border: none;
  position: relative;
  user-select: none;
  font-family: inherit;
  text-decoration: none;
  transition: all 100ms ease-out;
  padding: 1rem 2.4rem 1.2rem;
  border-radius: 100rem;
  display: inline-flex;
  justify-content: center;
  align-items: center;
}

.c69,
.c69 .c1,
.c69 .c32,
.c69 .c32 * {
  transition: all 100ms ease-out;
}

.c69:hover {
  cursor: pointer;
}

.c69:focus {
  outline: none;
}

.c69:disabled {
  cursor: not-allowed;
}

.c69:disabled {
  color: #98A7B7;
  background: #dfe4e9;
}

.c69:disabled .c32 * {
  fill: #98A7B7;
}

.c69:not(:disabled):not(:hover) {
  color: #ffffff;
  background: #3872D2;
}

.c69:not(:disabled):not(:hover) .c32 * {
  fill: #ffffff;
}

.c69:not(:disabled):active {
  color: #ffffff;
  background: #275093;
}

.c69:not(:disabled):active .c32 * {
  fill: #ffffff;
}

.c69:not(:disabled):not(:active):hover {
  color: #ffffff;
  background: #3061B3;
  box-shadow: 0 0.2rem 0.8rem rgba(48,97,179,0.35);
}

.c69:not(:disabled):not(:active):hover .c32 * {
  fill: #ffffff;
}

.c69 .c32+.c1 {
  margin-left: 0.8rem;
}

.c69 .c1+.c32 {
  margin-left: 0.8rem;
}

.c46 {
  position: relative;
  display: inline-flex;
}

.c56 {
  font-size: 1.2rem;
  line-height: 1.6rem;
  margin: 0.5rem 1.6rem 0;
  white-space: initial;
  user-select: none;
}

.c50 {
  pointer-events: none;
}

.c50 * {
  fill: #546A7F;
}

.c50:hover * {
  fill: #546A7F;
}

.c51 {
  margin-left: 1.6rem;
}

.c12 {
  top: 50%;
  left: 0;
  cursor: text;
  user-select: none;
  position: absolute;
  pointer-events: none;
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  font-size: 1.6rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.6rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
  transform-origin: 0 0;
  touch-action: manipulation;
  transform: translateY(-50%);
  opacity: 1;
  z-index: 1;
  width: 100%;
  max-width: min-content;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c12 ::after {
  content: ' *';
}

.c8 {
  position: relative;
  display: flex;
  align-items: center;
  flex-direction: row;
  box-sizing: border-box;
  height: 5.6rem;
  padding: 0 1.6rem;
  transition: all 100ms ease-out;
  cursor: text;
  border-radius: 0.4rem 0.4rem 0 0;
  background-color: #eff2f4;
}

.c8 .c11 {
  color: #546A7F;
}

.c8~.c55 {
  color: #546A7F;
}

.c8::after {
  content: '';
  width: 100%;
  height: 0;
  position: absolute;
  bottom: 0;
  left: 0;
  box-sizing: border-box;
  border-top: 0.1rem solid #546A7F;
  transition: all 100ms ease-out;
}

.c8:hover::after,
.c8:focus-within::after {
  border-width: 0.2rem;
}

.c8 input {
  box-shadow: 0 0 0 100000px #eff2f4 inset;
}

.c8:focus-within,
.c8:focus-within:hover {
  background-color: #EBF1FA;
}

.c8:focus-within::after,
.c8:focus-within:hover::after {
  border-color: #3872D2;
  border-radius: 0;
}

.c8:focus-within .c11,
.c8:focus-within:hover .c11 {
  color: #3872D2;
}

.c8:focus-within input,
.c8:focus-within:hover input {
  box-shadow: 0 0 0 100000px #EBF1FA inset;
}

.c8:focus-within input::placeholder,
.c8:focus-within:hover input::placeholder {
  color: rgba(0, 90, 238, .2);
}

.c9 {
  display: flex;
  position: relative;
  align-items: center;
  background-color: transparent;
  flex: 1;
  height: 100%;
}

.c43 {
  position: absolute;
  left: 0;
  opacity: 0;
  cursor: text;
  user-select: none;
  pointer-events: none;
  color: rgba(0, 90, 238, .2);
  bottom: 0.7rem;
}

.c6 {
  position: relative;
  flex-direction: column;
  display: inline-flex;
  width: min-content;
  min-width: auto;
  margin: 0.8rem 0.8rem 0.8rem 0;
}

.c41 {
  position: relative;
  flex-direction: column;
  display: flex;
  width: 100%;
  min-width: auto;
  margin: 0.8rem 0;
}

.c48 {
  position: relative;
  flex-direction: column;
  display: flex;
  width: 100%;
  min-width: 20rem;
  margin: 0.8rem 0;
}

.c10 {
  color: #13181D;
  width: 100%;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  transition: all 100ms ease-out;
  background-color: transparent;
  border: none;
  text-overflow: ellipsis;
  resize: none;
  z-index: 1;
  align-self: flex-end;
  margin-bottom: 0.7rem;
}

.c10,
.c10~.c42 {
  font-size: 1.6rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.6rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
}

.c10.c10.c10:focus {
  outline: none;
  box-shadow: unset;
}

.c10.c10.c10:focus::placeholder {
  opacity: 1;
}

.c10:disabled {
  color: #435465;
}

.c10:disabled~.c11,
.c10:disabled~.c42 {
  cursor: not-allowed;
}

.c10 ::placeholder {
  opacity: 0;
  transition: all 100ms ease-out;
}

.c10:not(:placeholder-shown)~.c11,
.c10:focus~.c11 {
  transform: translateY(-87%) scale(0.75);
}

.c10:not(:placeholder-shown)~.c42 {
  opacity: 1;
}

.c16 {
  color: #13181D;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  margin: 0px 0.8rem 0px 0px;
  cursor: default;
}

.c16 ::after {
  color: red;
  content: ' *';
}

.c57 {
  position: relative;
  display: inline-flex;
  min-width: auto;
  margin: 0.8rem 0.8rem 0.8rem 0;
}

.c57 .c5 {
  margin: 0;
  caret-color: transparent;
}

.c57 .c5 label {
  pointer-events: none;
}

.c57 .c5 div,
.c57 .c5 input,
.c57 .c5 label {
  cursor: pointer;
}

.c57 .c5 .c49 {
  transition: transform 200ms ease-out;
  transform: rotate(0deg);
}

.c57 .c5:not(:focus-within):hover .c49 * {
  fill: #13181D;
}

.c22 {
  display: inline-flex;
  flex-direction: column;
  align-items: flex-start;
}

.c22>:first-child {
  margin-bottom: 0.9rem;
}

.c34 {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.c34>:first-child {
  margin-bottom: 0.9rem;
}

.c24 {
  user-select: none;
  cursor: inherit;
  color: inherit;
}

.c24 ::after {
  content: ' *';
  color: default:inherit;
  disabled: #98A7B7;
}

.c27 {
  user-select: none;
  cursor: inherit;
  color: inherit;
  padding: 0 1.6rem;
}

.c25 {
  display: grid;
  grid-template-columns: repeat(1, 1fr);
}

.c31 {
  border: 0.15rem solid;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  border-radius: 22.2%;
  transition: all 100ms ease-out;
  display: flex;
  justify-content: center;
  align-items: center;
}

.c31 .c32 {
  pointer-events: none;
  z-index: 1;
  transition: all 200ms ease-in-out;
  transform: scale(0);
  width: 100%;
  height: 100%;
  margin-right: 0.05rem;
}

.c29 {
  opacity: 0;
  margin: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  outline: none;
  position: absolute;
}

.c29:checked~.c30 {
  border-color: #3872D2;
  background-color: #3872D2;
}

.c29:checked~.c30 .c32 {
  transform: scale(1);
}

.c29:checked~.c30 .c32 * {
  fill: #ffffff;
}

.c29:not(:checked)~.c30 {
  background-color: transparent;
  border-color: #13181D;
}

.c29:not(:disabled):focus~.c30 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
  border-color: #3872D2;
}

.c29:not(:disabled):focus:not(:checked)~.c30 {
  border-color: #3872D2;
}

.c28 {
  margin: 0.3rem;
  flex-shrink: 0;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
}

.c26 {
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  align-items: center;
  justify-content: flex-end;
  flex-direction: row-reverse;
}

.c26 * {
  cursor: pointer;
}

.c26.c26.c26:hover .c30 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
  border-color: #3872D2;
}

.c26.c26.c26:active .c30 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.5);
  border-color: #3061B3;
}

.c67 {
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  justify-content: flex-start;
  align-items: center;
  flex-direction: row;
}

.c67 * {
  cursor: pointer;
}

.c67.c67.c67:hover .c30 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
  border-color: #3872D2;
}

.c67.c67.c67:active .c30 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.5);
  border-color: #3061B3;
}

.c45 {
  cursor: pointer;
  border-radius: 50%;
  padding: 0.8rem;
}

.c45 * {
  fill: #607890;
}

.c45:hover {
  background-color: #dfe4e9;
}

.c45:hover * {
  fill: #303C48;
}

.c40>.c5 {
  margin: 0;
}

.c40>.c5>.c7 {
  padding-right: 0.8rem;
}

.c54 {
  border-right: 0.1rem solid rgba(84, 106, 127, 0.2);
  height: 3.2rem;
  margin-right: 1.6rem;
  border-radius: 0.1rem;
  transition: border-color 100ms ease-out;
}

.c52 {
  padding: 0 1.6rem 0 0.8rem;
}

.c52 .c32:first-of-type {
  margin-right: 0.8rem;
}

.c52 .c32:nth-of-type(2) {
  transition: transform 200ms ease-out;
}

.c52:hover .c53 {
  border-color: #546A7F;
}

.c17 {
  grid-area: label;
  align-self: center;
  user-select: none;
}

.c21 {
  grid-area: description;
  margin: 5px 0 0 2px;
  color: #012040;
}

.c15 {
  margin: 0.8rem 0.8rem 0.8rem 0;
  display: inline-grid;
  align-items: center;
  grid-template-columns: minmax(max-content, 25%) minmax(auto, 80%);
  grid-template-areas: 'label field' 'random description';
}

.c19 {
  width: 1px;
  opacity: 0;
}

.c18 {
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
  padding: 0.8rem;
  color: #435465;
  background-clip: padding-box;
  background-color: #ffffff;
  box-sizing: border-box;
  border: 1px solid #b0bcc8;
  border-radius: 5px;
  cursor: pointer;
  text-align: center;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  user-select: none;
}

.c18:focus {
  border-color: #012040;
  outline: 0;
}

.c60 {
  display: flex;
  align-items: center;
}

.c58 {
  position: relative;
  display: inline-flex;
  min-width: auto;
  margin: 0.8rem 0.8rem 0.8rem 0;
}

.c58 .c5 {
  margin: 0;
}

.c58 .c5 label {
  pointer-events: none;
}

.c58 .c5 div,
.c58 .c5 input,
.c58 .c5 label {
  cursor: pointer;
}

.c58 .c5:focus-within input {
  cursor: text;
}

.c58 .c5 input {
  padding-right: 1.6rem;
}

.c58 .c59>.c32 {
  transform: rotate(0deg);
}

.c58 .c59>.c32 * {
  fill: #546A7F;
}

.c58:not(:focus-within):hover .c59>.c32 * {
  fill: #13181D;
}

.c39 {
  position: relative;
  transition: all 100ms ease-out;
  box-sizing: border-box;
  border: 0.15rem solid;
  width: 100%;
  height: 100%;
  border-radius: 100%;
}

.c39::after {
  content: '';
  position: absolute;
  top: 50%;
  left: 50%;
  width: 67%;
  height: 67%;
  transform: translate(-50%,-50%) scale(0);
  border-radius: 100%;
  transition: transform 100ms ease-out;
}

.c37 {
  position: absolute;
  opacity: 0;
  width: 1%;
  height: 1%;
  margin: 0;
}

.c37~.c38 {
  border-color: #13181D;
}

.c37~.c38::after {
  background-color: #13181D;
}

.c37:checked~.c38::after {
  transform: translate(-50%,-50%) scale(1);
}

.c37:disabled~.c38 {
  border-color: #98A7B7;
}

.c37:disabled~.c38::after {
  background-color: #98A7B7;
}

.c37:not(:disabled):checked~.c38 {
  border-color: #3872D2;
}

.c37:not(:disabled):checked~.c38::after {
  background-color: #3872D2;
}

.c37:not(:disabled):focus~.c38 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
}

.c36 {
  margin: 0.3rem;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
  border-radius: 100%;
  flex-grow: 0;
  flex-shrink: 0;
}

.c35 {
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  align-items: center;
  justify-content: flex-end;
  flex-direction: row-reverse;
}

.c35:hover .c38 {
  border-color: #3872D2;
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
}

.c35:active .c38 {
  border-color: #3061B3;
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.5);
}

.c47 {
  display: inline-flex;
  width: min-content;
  min-width: auto;
  margin: 0.8rem 0.8rem 0.8rem 0;
}

.c47>.c5 {
  margin: 0;
}

.c47 input[type='time']::-webkit-calendar-picker-indicator {
  background: none;
  display: none;
}

.c68 {
  display: flex;
  grid-column: 1/-1;
  margin-top: 1.6rem;
  flex-direction: row;
  justify-content: flex-end;
}

.c68>*+* {
  margin-left: 1.6rem;
}

.c4 {
  grid-column: 1/7;
}

.c4>* {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c13 {
  grid-column: 7/-1;
}

.c13>* {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c14 {
  grid-column: 1/-1;
}

.c14>* {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c64 {
  grid-column: 1/5;
}

.c64>* {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c65 {
  grid-column: 5/9;
}

.c65>* {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c66 {
  grid-column: 9/-1;
}

.c66>* {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c62 {
  grid-column: 1/-1;
  margin-top: 2.6rem;
}

.c63 {
  margin-bottom: 1rem;
}

.c0 {
  grid-template-rows: auto;
  grid-template-columns: repeat(12,1fr);
  grid-gap: 1.2rem;
  min-width: 300px;
  width: 100%;
  display: grid;
}

.c0>h2 {
  grid-column: 1/-1;
  margin-bottom: 0.8rem;
}

.c0>span {
  grid-column: 1/-1;
  margin-bottom: 1rem;
}

<div>
  <form
    class="c0"
    gridgap="1.2rem"
    id="medly-dynamic-form"
    minwidth="300px"
    name="Test form"
  >
    <h2
      class="c1 c2"
      textalign="initial"
      textcolor="inherit"
      textvariant="h2"
    >
      Dummy Form
    </h2>
    <span
      class="c1 c3"
      textalign="initial"
      textcolor="inherit"
      textvariant="body1"
    >
      Dummy Description
    </span>
    <div
      class="c4"
      gridcolumn="1/7"
    >
      <div
        class="c5 c6"
        id="firstName-input-wrapper"
        minwidth="auto"
      >
        <div
          class="c7 c8"
          minrows="1"
          variant="filled"
        >
          <div
            class="c9"
            variant="filled"
          >
            <input
              aria-describedby="firstName-helper-text"
              class="c10"
              errortext=""
              id="firstName-input"
              inputsize="M"
              name="firstName"
              placeholder=" "
              required=""
              type="text"
              value=""
              variant="filled"
            />
            <label
              class="c11 c12"
              for="firstName-input"
              inputwidth="0"
              required=""
              variant="filled"
            >
              First Name
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c13"
      gridcolumn="7/-1"
    >
      <div
        class="c5 c6"
        id="lastName-input-wrapper"
        minwidth="auto"
      >
        <div
          class="c7 c8"
          minrows="1"
          variant="filled"
        >
          <div
            class="c9"
            variant="filled"
          >
            <input
              aria-describedby="lastName-helper-text"
              class="c10"
              errortext=""
              id="lastName-input"
              inputsize="M"
              name="lastName"
              placeholder=" "
              required=""
              type="text"
              value=""
              variant="filled"
            />
            <label
              class="c11 c12"
              for="lastName-input"
              inputwidth="0"
              required=""
              variant="filled"
            >
              Last Name
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c14"
      gridcolumn="1/-1"
    >
      <div
        class="c5 c6"
        id="email-input-wrapper"
        minwidth="auto"
      >
        <div
          class="c7 c8"
          minrows="1"
          variant="filled"
        >
          <div
            class="c9"
            variant="filled"
          >
            <input
              aria-describedby="email-helper-text"
              class="c10"
              errortext=""
              id="email-input"
              inputsize="M"
              name="email"
              placeholder=" "
              required=""
              type="email"
              value=""
              variant="filled"
            />
            <label
              class="c11 c12"
              for="email-input"
              inputwidth="0"
              required=""
              variant="filled"
            >
              Email
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c14"
      gridcolumn="1/-1"
    >
      <div
        class="c5 c6"
        id="website-input-wrapper"
        minwidth="auto"
      >
        <div
          class="c7 c8"
          minrows="1"
          variant="filled"
        >
          <div
            class="c9"
            variant="filled"
          >
            <input
              aria-describedby="website-helper-text"
              class="c10"
              errortext=""
              id="website-input"
              inputsize="M"
              name="website"
              placeholder=" "
              required=""
              type="url"
              value=""
              variant="filled"
            />
            <label
              class="c11 c12"
              for="website-input"
              inputwidth="0"
              required=""
              variant="filled"
            >
              Website
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c14"
      gridcolumn="1/-1"
    >
      <div
        class="c15"
        id="resume-field"
        labelposition="left"
      >
        <label
          class="c16 c17"
          labelposition="left"
          required=""
        >
          Resume
        </label>
        <label
          class="c18"
          for="resume"
          id="resume-label"
        >
          Click to choose file
          <input
            class="c19"
            files=""
            id="resume"
            maxsize="5000000"
            minwidth="auto"
            name="resume"
            required=""
            type="file"
          />
        </label>
        <span
          class="c1 c20 c21"
          textalign="initial"
          textcolor="inherit"
        >
          File size should be less than 5MB
        </span>
      </div>
    </div>
    <div
      class="c14"
      gridcolumn="1/-1"
    >
      <div
        aria-describedby="languages-helper-text"
        class="c22"
        id="languages-wrapper"
        minwidth="auto"
        name="languages"
        type="checkbox"
      >
        <span
          class="c1 c23 c24"
          id="languages-label"
          required=""
          textalign="initial"
          textcolor="inherit"
          textvariant="body1"
          textweight="Medium"
          type="checkbox"
        >
          Languages
        </span>
        <div
          class="c25"
          columns="1"
          id="languages-options"
        >
          <label
            class="c26"
            for="JAVA-languages"
            id="JAVA-languages-wrapper"
            labelposition="right"
          >
            <span
              class="c1 c20 c27"
              id="JAVA-languages-label"
              labelposition="right"
              textalign="initial"
              textcolor="inherit"
              type="checkbox"
            >
              JAVA
            </span>
            <div
              class="c28"
            >
              <input
                class="c29"
                id="JAVA-languages"
                name="java"
                type="checkbox"
              />
              <div
                class="c30 c31"
              >
                <svg
                  class="c32 c33"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                    fill="green"
                  />
                </svg>
              </div>
            </div>
          </label>
          <label
            class="c26"
            for="RUBY-languages"
            id="RUBY-languages-wrapper"
            labelposition="right"
          >
            <span
              class="c1 c20 c27"
              id="RUBY-languages-label"
              labelposition="right"
              textalign="initial"
              textcolor="inherit"
              type="checkbox"
            >
              RUBY
            </span>
            <div
              class="c28"
            >
              <input
                class="c29"
                id="RUBY-languages"
                name="ruby"
                type="checkbox"
              />
              <div
                class="c30 c31"
              >
                <svg
                  class="c32 c33"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                    fill="green"
                  />
                </svg>
              </div>
            </div>
          </label>
        </div>
      </div>
    </div>
    <div
      class="c14"
      gridcolumn="1/-1"
    >
      <div
        aria-describedby="role-helper-text"
        class="c34"
        id="role-wrapper"
        minwidth="auto"
        type="radio"
      >
        <span
          class="c1 c23 c24"
          id="role-label"
          required=""
          textalign="initial"
          textcolor="inherit"
          textvariant="body1"
          textweight="Medium"
          type="radio"
        >
          Role
        </span>
        <div
          class="c25"
          columns="1"
          id="role-options"
        >
          <label
            class="c35"
            for="Front End-role"
            id="Front End-role-wrapper"
            labelposition="right"
          >
            <span
              class="c1 c20 c27"
              id="Front End-role-label"
              labelposition="right"
              textalign="initial"
              textcolor="inherit"
              type="radio"
            >
              Front End
            </span>
            <div
              class="c36"
            >
              <input
                class="c37"
                id="Front End-role"
                name="role"
                required=""
                type="radio"
                value="front-end"
              />
              <div
                class="c38 c39"
              />
            </div>
          </label>
          <label
            class="c35"
            for="Back End-role"
            id="Back End-role-wrapper"
            labelposition="right"
          >
            <span
              class="c1 c20 c27"
              id="Back End-role-label"
              labelposition="right"
              textalign="initial"
              textcolor="inherit"
              type="radio"
            >
              Back End
            </span>
            <div
              class="c36"
            >
              <input
                class="c37"
                id="Back End-role"
                name="role"
                required=""
                type="radio"
                value="back-end"
              />
              <div
                class="c38 c39"
              />
            </div>
          </label>
          <label
            class="c35"
            for="Full Stack-role"
            id="Full Stack-role-wrapper"
            labelposition="right"
          >
            <span
              class="c1 c20 c27"
              id="Full Stack-role-label"
              labelposition="right"
              textalign="initial"
              textcolor="inherit"
              type="radio"
            >
              Full Stack
            </span>
            <div
              class="c36"
            >
              <input
                class="c37"
                id="Full Stack-role"
                name="role"
                required=""
                type="radio"
                value="full-stack"
              />
              <div
                class="c38 c39"
              />
            </div>
          </label>
        </div>
      </div>
    </div>
    <div
      class="c4"
      gridcolumn="1/7"
    >
      <div
        class="c5 c6 c40"
        id="birthDate-datepicker-wrapper"
        minwidth="auto"
        placement="bottom-start"
        variant="filled"
      >
        <div
          class="c5 c41"
          id="birthDate-input-wrapper"
          minwidth="auto"
        >
          <div
            class="c7 c8"
            minrows="1"
            variant="filled"
          >
            <div
              class="c9"
              variant="filled"
            >
              <input
                aria-describedby="birthDate-helper-text"
                class="c10"
                errortext=""
                id="birthDate-input"
                inputsize="M"
                name="birthDate"
                pattern="\\\\d{2} \\\\/ \\\\d{2} \\\\/ \\\\d{4}"
                placeholder="DD / MM / YYYY"
                required=""
                type="text"
                value=""
                variant="filled"
              />
              <span
                class="c42 c43"
                variant="filled"
              >
                DD / MM / YYYY
              </span>
              <label
                class="c11 c12"
                for="birthDate-input"
                inputwidth="0"
                required=""
                variant="filled"
              >
                Birth Date
              </label>
            </div>
            <svg
              class="c32 c44 c45"
              fill="none"
              height="1em"
              id="birthDate-calendar-icon"
              title="birthDate-calendar-icon"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M19 4h-1V3c0-.55-.45-1-1-1s-1 .45-1 1v1H8V3c0-.55-.45-1-1-1s-1 .45-1 1v1H5c-1.11 0-1.99.9-1.99 2L3 20a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 15c0 .55-.45 1-1 1H6c-.55 0-1-.45-1-1V9h14v10zM9 13v-2H7v2h2zm2-2h2v2h-2v-2zm6 2v-2h-2v2h2z"
                fill="#000"
                fill-opacity=".54"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c13"
      gridcolumn="7/-1"
    >
      <div
        class="c46 c47"
        id="medly-popover-wrapper"
        minwidth="auto"
      >
        <div
          class="c5 c48"
          id="birthTime-input-wrapper"
          minwidth="20rem"
        >
          <div
            class="c7 c8"
            minrows="1"
            variant="filled"
          >
            <div
              class="c9"
              variant="filled"
            >
              <input
                aria-describedby="birthTime-helper-text"
                class="c10"
                errortext=""
                id="birthTime-input"
                inputsize="M"
                name="birthTime"
                placeholder=" "
                required=""
                type="time"
                value=""
                variant="filled"
              />
              <label
                class="c11 c12"
                for="birthTime-input"
                inputwidth="0"
                required=""
                variant="filled"
              >
                Birth Time
              </label>
            </div>
            <svg
              class="c32 c33 c49 c50 c51"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm-.28-13h.06c.4 0 .72.32.72.72v4.54l3.87 2.3c.35.2.46.65.25.99-.2.34-.64.44-.98.24l-4.15-2.49a.99.99 0 0 1-.49-.86V7.72c0-.4.32-.72.72-.72z"
                fill="#000"
                fill-opacity=".54"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c14"
      gridcolumn="1/-1"
    >
      <div
        class="c5 c6"
        id="experience-wrapper"
        label="Experience"
        minwidth="auto"
        name="experience"
        type="date-range"
      >
        <div
          class="c7 c8 c52"
          id="experience-textFields"
          variant="filled"
        >
          <svg
            class="c32 c44 c45"
            fill="none"
            height="1em"
            id="experience-calendar-icon"
            title="experience-calendar-icon"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M19 4h-1V3c0-.55-.45-1-1-1s-1 .45-1 1v1H8V3c0-.55-.45-1-1-1s-1 .45-1 1v1H5c-1.11 0-1.99.9-1.99 2L3 20a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 15c0 .55-.45 1-1 1H6c-.55 0-1-.45-1-1V9h14v10zM9 13v-2H7v2h2zm2-2h2v2h-2v-2zm6 2v-2h-2v2h2z"
              fill="#000"
              fill-opacity=".54"
              fill-rule="evenodd"
            />
          </svg>
          <div
            class="c9"
            id="experience-startDate-input-wrapper"
            variant="filled"
          >
            <input
              class="c10"
              errortext=""
              id="experience-startDate-input"
              inputsize="M"
              name="START_DATE"
              pattern="\\\\d{2} \\\\/ \\\\d{2} \\\\/ \\\\d{4}"
              placeholder="DD / MM / YYYY"
              required=""
              value=""
              variant="filled"
            />
            <span
              class="c42 c43"
              variant="filled"
            >
              DD / MM / YYYY
            </span>
            <label
              class="c11 c12"
              for="experience-startDate-input"
              inputwidth="0"
              required=""
              variant="filled"
            >
              From
            </label>
          </div>
          <i
            class="c53 c54"
            variant="filled"
          />
          <div
            class="c9"
            id="experience-endDate-input-wrapper"
            variant="filled"
          >
            <input
              class="c10"
              errortext=""
              id="experience-endDate-input"
              inputsize="M"
              name="END_DATE"
              pattern="\\\\d{2} \\\\/ \\\\d{2} \\\\/ \\\\d{4}"
              placeholder="DD / MM / YYYY"
              required=""
              value=""
              variant="filled"
            />
            <span
              class="c42 c43"
              variant="filled"
            >
              DD / MM / YYYY
            </span>
            <label
              class="c11 c12"
              for="experience-endDate-input"
              inputwidth="0"
              required=""
              variant="filled"
            >
              To
            </label>
          </div>
        </div>
        <span
          class="c55 c56"
          id="experience-helper-text"
          variant="filled"
        />
      </div>
    </div>
    <div
      class="c14"
      gridcolumn="1/-1"
    >
      <div
        class="c57"
        id="country-wrapper"
        minwidth="auto"
        variant="filled"
      >
        <div
          class="c5 c41"
          id="country-input-wrapper"
          minwidth="auto"
        >
          <div
            class="c7 c8"
            minrows="1"
            variant="filled"
          >
            <div
              class="c9"
              variant="filled"
            >
              <input
                aria-describedby="country-helper-text"
                autocomplete="off"
                class="c10"
                errortext=""
                id="country-input"
                inputmode="none"
                inputsize="M"
                name="country"
                placeholder="Please Select . . ."
                required=""
                type="text"
                value=""
                variant="filled"
              />
              <label
                class="c11 c12"
                for="country-input"
                inputwidth="0"
                required=""
                variant="filled"
              >
                Country
              </label>
            </div>
            <svg
              class="c32 c33 c49 c50 c51"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.792 14.97a1 1 0 0 1-1.584 0l-3.165-4.11a1 1 0 0 1 .793-1.61h6.328a1 1 0 0 1 .793 1.61l-3.165 4.11z"
                fill="#000"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c14"
      gridcolumn="1/-1"
    >
      <div
        class="c58"
        id="graduation-wrapper"
        minwidth="auto"
        name="graduation"
        variant="filled"
      >
        <div
          class="c5 c41"
          id="graduation-input-wrapper"
          minwidth="auto"
        >
          <div
            class="c7 c8"
            minrows="1"
            variant="filled"
          >
            <div
              class="c9"
              variant="filled"
            >
              <input
                aria-describedby="graduation-helper-text"
                autocomplete="off"
                class="c10"
                errortext=""
                id="graduation-input"
                inputsize="M"
                placeholder="Please Select . . ."
                required=""
                type="text"
                value=""
                variant="filled"
              />
              <label
                class="c11 c12"
                for="graduation-input"
                inputwidth="0"
                required=""
                variant="filled"
              >
                Graduation
              </label>
            </div>
            <div
              class="c59 c60"
              id="graduation-count"
            >
              <svg
                class="c32 c33"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.792 14.97a1 1 0 0 1-1.584 0l-3.165-4.11a1 1 0 0 1 .793-1.61h6.328a1 1 0 0 1 .793 1.61l-3.165 4.11z"
                  fill="#000"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <h4
      class="c1 c61 c62"
      textalign="initial"
      textcolor="inherit"
      textvariant="h4"
    >
      Marks
    </h4>
    <span
      class="c1 c20 c63"
      textalign="initial"
      textcolor="inherit"
      textvariant="body2"
    >
      Marks Information
    </span>
    <div
      class="c64"
      gridcolumn="1/5"
    >
      <div
        class="c5 c6"
        id="marks.database-input-wrapper"
        minwidth="auto"
      >
        <div
          class="c7 c8"
          minrows="1"
          variant="filled"
        >
          <div
            class="c9"
            variant="filled"
          >
            <input
              aria-describedby="marks.database-helper-text"
              class="c10"
              errortext=""
              id="marks.database-input"
              inputsize="M"
              name="marks.database"
              placeholder="Database"
              required=""
              type="number"
              value=""
              variant="filled"
            />
            <label
              class="c11 c12"
              for="marks.database-input"
              inputwidth="0"
              required=""
              variant="filled"
            >
              Database
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c65"
      gridcolumn="5/9"
    >
      <div
        class="c5 c6"
        id="marks.algorithms-input-wrapper"
        minwidth="auto"
      >
        <div
          class="c7 c8"
          minrows="1"
          variant="filled"
        >
          <div
            class="c9"
            variant="filled"
          >
            <input
              aria-describedby="marks.algorithms-helper-text"
              class="c10"
              errortext=""
              id="marks.algorithms-input"
              inputsize="M"
              name="marks.algorithms"
              placeholder="Algorithms"
              required=""
              type="number"
              value=""
              variant="filled"
            />
            <label
              class="c11 c12"
              for="marks.algorithms-input"
              inputwidth="0"
              required=""
              variant="filled"
            >
              Algorithms
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c66"
      gridcolumn="9/-1"
    >
      <div
        class="c5 c6"
        id="marks.maths-input-wrapper"
        minwidth="auto"
      >
        <div
          class="c7 c8"
          minrows="1"
          variant="filled"
        >
          <div
            class="c9"
            variant="filled"
          >
            <input
              aria-describedby="marks.maths-helper-text"
              class="c10"
              errortext=""
              id="marks.maths-input"
              inputsize="M"
              name="marks.maths"
              placeholder="Maths"
              required=""
              type="number"
              value=""
              variant="filled"
            />
            <label
              class="c11 c12"
              for="marks.maths-input"
              inputwidth="0"
              required=""
              variant="filled"
            >
              Maths
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c14"
      gridcolumn="1/-1"
    >
      <label
        class="c67"
        for="agree"
        id="agree-wrapper"
        labelposition="left"
      >
        <span
          class="c1 c20 c27"
          id="agree-label"
          labelposition="left"
          textalign="initial"
          textcolor="inherit"
          type="checkbox"
        >
          Do you Agree
        </span>
        <div
          class="c28"
        >
          <input
            class="c29"
            id="agree"
            minwidth="auto"
            name="agree"
            type="checkbox"
          />
          <div
            class="c30 c31"
          >
            <svg
              class="c32 c33"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                fill="green"
              />
            </svg>
          </div>
        </div>
      </label>
    </div>
    <div
      class="c68"
      flexdirection="row"
    >
      <button
        class="c69"
        edges="rounded"
        form="medly-dynamic-form"
        type="submit"
        variant="solid"
      >
        <span
          class="c1 c23"
          textalign="initial"
          textcolor="inherit"
          textvariant="button1"
        >
          Upload
        </span>
      </button>
    </div>
  </form>
</div>
`;
